@@ -6,7 +6,7 @@ import com.jose.ticket.domain.ticketinfo.entity.TicketEntity;
 import com.jose.ticket.domain.ticketinfo.repository.TicketRepository;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -18,34 +18,62 @@ public class SearchService {
         this.ticketRepository = ticketRepository;
     }
 
+    // 불용어 리스트
+    private static final Set<String> STOPWORDS = Set.of(
+            "의", "이", "가", "은", "는", "을", "를", "에", "에서",
+            "와", "과", "도", "으로", "로", "및", "에게", "한테", "께", "께서",
+            "밖에", "마저", "까지", "부터", "이나", "나", "라도", "처럼", "공연", "콘서트",
+            "추천"
+    );
+
+    // 키워드 전처리 (불용어, 특수문자 제거 & 분리)
+    public static List<String> splitKeywords(String keyword) {
+        // 특수문자 제거
+        String cleaned = keyword.replaceAll("[^\\p{L}\\p{N}\\s]", " ");
+        // 한글 조사를 불용어로 처리
+        for (String stopword : STOPWORDS) {
+            cleaned = cleaned.replace(stopword, " ");
+        }
+        // 여러 칸 공백 -> 하나로
+        cleaned = cleaned.replaceAll("\\s+", " ");
+        String[] keywords = cleaned.trim().split(" ");
+        return Arrays.stream(keywords)
+                .filter(s -> !s.isEmpty())
+                .toList();
+    }
+
     public List<TicketResponseDto> searchTickets(SearchRequestDto request) {
         String keyword = request.getQuery() != null ? request.getQuery().trim() : "";
         Integer categoryId = request.getCategoryId();
-
-        System.out.println("🧪 keyword: " + keyword + ", categoryId: " + categoryId + " (" + (categoryId != null ? categoryId.getClass().getSimpleName() : "null") + ")");
-
         List<TicketEntity> tickets;
 
-        // ✅ keyword가 빈 문자열이면 전체 리스트로 대체
         if (keyword.isEmpty()) {
-            System.out.println("🔍 키워드 없음 → 전체 리스트 반환");
             tickets = (categoryId == null || categoryId == 0)
                     ? ticketRepository.findAll()
                     : ticketRepository.findByCategoryId(categoryId);
-        }
-        // ✅ 키워드 존재
-        else {
-            if (categoryId == null || categoryId == 0) {
-                System.out.println("🔍 전체 검색 (카테고리 없음)");
-                tickets = ticketRepository.searchByTitleOnly(keyword);
+        } else {
+            List<String> keywords = splitKeywords(keyword);
+            if (keywords.isEmpty()) {
+                // 전처리 후 남은 키워드가 없으면 전체 반환
+                tickets = (categoryId == null || categoryId == 0)
+                        ? ticketRepository.findAll()
+                        : ticketRepository.findByCategoryId(categoryId);
             } else {
-                System.out.println("🔍 카테고리 포함 검색: categoryId = " + categoryId);
-                tickets = ticketRepository.findByTitleContainingIgnoreCaseAndCategoryId(keyword, categoryId);
+                // 붙어쓰기/띄어쓰기 무시하고 모두 포함되는 항목만 반환
+                List<TicketEntity> all = (categoryId == null || categoryId == 0)
+                        ? ticketRepository.findAll()
+                        : ticketRepository.findByCategoryId(categoryId);
+
+                tickets = all.stream()
+                        .filter(t -> {
+                            // 띄어쓰기 제거한 title로 비교
+                            String target = t.getTitle().replaceAll("\\s", "");
+                            return keywords.stream()
+                                    .allMatch(k -> target.contains(k.replaceAll("\\s", "")));
+                        })
+                        .collect(Collectors.toList());
             }
         }
-
-        return tickets.stream()
-                .map(TicketResponseDto::new)
-                .collect(Collectors.toList());
+        return tickets.stream().map(TicketResponseDto::new).toList();
     }
 }
